# Caffeinator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  installer.iss  procawake.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: build.py  generate_banner.py  generate_ico.py
src/procawake/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  gui.py  icons.py  monitor.py  power.py  scanner.py  tray.py
tests/: conftest.py  test_config.py  test_monitor.py  test_power.py
